# lightgraph

./: .gitignore  CMakeLists.txt
include/: ldb.hh  properties.hh  schema.hh  strhash.hh  typedef.hh
src/: endian_conversion.cc  iterator.cc  ldb.cc  properties.cc  schema.cc  strhash.cc
tests/: experiment1.cc  experiment2.cc  experiment3.cc  experiment4.cc  experiment5.cc  test_graphscan.cc  test_iter.cc  test_lala.cc  test_prefix_extractor.cc  test_vertex.cc  testdb.cc
